// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelsCardTable > matches snapshot with group type 1`] = `
<DocumentFragment>
  <div
    id="models-by-solution-table"
  >
    <div
      class="models-by-solutions"
    >
      <div
        class="bg-primary-lighter radius-md padding-2"
      >
        <div
          class="grid-row flex-align-center"
          data-testid="grid"
        >
          <div
            class="tablet:grid-col-6 desktop:grid-col-7"
            data-testid="grid"
          >
            <h3
              class="margin-y-1"
            >
              CMMI/PCMG
            </h3>
          </div>
          <div
            class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
            data-testid="grid"
          >
            <ul
              class="usa-button-group usa-button-group--segmented"
            >
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2 bg-primary-darker"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Total
                  </div>
                  <div
                    data-testid="total-count"
                  >
                    5
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Planned
                  </div>
                  <div
                    data-testid="planned-count"
                  >
                    3
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Active
                  </div>
                  <div
                    data-testid="active-count"
                  >
                    1
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Ended
                  </div>
                  <div
                    data-testid="ended-count"
                  >
                    1
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-3"
    >
      <form
        class="usa-form usa-search margin-bottom-3 maxw-none width-mobile-lg"
        data-testid="table-client-filter"
        role="search"
      >
        <label
          class="usa-sr-only"
          data-testid="label"
          for="models-by-solution-table-search"
        >
          Search Table
        </label>
        <input
          class="usa-input"
          data-testid="textInput"
          id="models-by-solution-table-search"
          name="Models by group Search"
          role="searchbox"
          type="search"
          value=""
        />
        <button
          class="usa-button"
          data-testid="button"
          type="submit"
        >
          <svg
            aria-label="search"
            class="usa-icon usa-icon--size-3"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </button>
      </form>
      <div
        class=""
        data-testid="page-results"
      >
        <span>
          <div
            aria-live="polite"
            class="margin-bottom-2"
            role="status"
          >
            Showing 1-3 of 5 results 
          </div>
        </span>
      </div>
    </div>
    <div
      class="grid-row grid-gap-2 margin-bottom-1 margin-top-4"
      data-testid="grid"
    >
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Patient Care Model Alpha"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-1/read-view"
                    >
                      Patient Care Model Alpha (PCMA)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Draft Model Plan
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Accountable Care
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        01/15/2024
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        06/30/2025
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Quality Improvement Model Beta"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-2/read-view"
                    >
                      Quality Improvement Model Beta (QIMB)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Active
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Disease-Specific & Episode-Based
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        07/01/2023
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        12/31/2024
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Innovation Project Gamma"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-3/read-view"
                    >
                      Innovation Project Gamma (IPG)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Ended
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Health Plan
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        01/01/2021
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        12/31/2022
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div
      class=""
    >
      <nav
        aria-label="Pagination"
        class="usa-pagination mint-pagination"
      >
        <ul
          class="usa-pagination__list"
        >
          <li
            class="usa-pagination__item usa-pagination__page-no"
          >
            <button
              aria-current="page"
              aria-label="Page 1"
              class="usa-pagination__button usa-current bg-transparent cursor-pointer"
              data-testid="pagination-page-number"
              type="button"
            >
              1
            </button>
          </li>
          <li
            class="usa-pagination__item usa-pagination__page-no"
          >
            <button
              aria-label="Page 2"
              class="usa-pagination__button bg-transparent cursor-pointer"
              data-testid="pagination-page-number"
              type="button"
            >
              2
            </button>
          </li>
          <li
            class="usa-pagination__item usa-pagination__arrow"
          >
            <button
              aria-label="Next page"
              class="usa-pagination__link usa-pagination__next-page border-0 padding-0 bg-transparent cursor-pointer"
              data-testid="pagination-next"
              type="button"
            >
              <span
                class="usa-pagination__link-text"
              >
                Next
              </span>
              <svg
                aria-hidden="true"
                class="usa-icon"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelsCardTable > matches snapshot with no models 1`] = `
<DocumentFragment>
  <div
    id="models-by-solution-table"
  >
    <div
      class="models-by-solutions"
    >
      <div
        class="bg-primary-lighter radius-md padding-2"
      >
        <div
          class="grid-row flex-align-center"
          data-testid="grid"
        >
          <div
            class="tablet:grid-col-6 desktop:grid-col-7"
            data-testid="grid"
          >
            <h3
              class="margin-y-1"
            >
               4innovation (4i)
            </h3>
          </div>
          <div
            class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
            data-testid="grid"
          >
            <ul
              class="usa-button-group usa-button-group--segmented"
            >
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2 bg-primary-darker"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Total
                  </div>
                  <div
                    data-testid="total-count"
                  >
                    0
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Planned
                  </div>
                  <div
                    data-testid="planned-count"
                  >
                    0
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Active
                  </div>
                  <div
                    data-testid="active-count"
                  >
                    0
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Ended
                  </div>
                  <div
                    data-testid="ended-count"
                  >
                    0
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="usa-alert usa-alert--info flex"
      data-testid="alert"
    >
      <div
        class="usa-alert__body"
      >
        <p
          class="usa-alert__text"
        >
          <span />
        </p>
        <h3
          class="margin-0"
        >
          There is no record of any  models using this solution.
        </h3>
        If you believe this is an error, please 
        <a
          class="usa-link"
          data-discover="true"
          href="/report-a-problem"
          target="_blank"
        >
          report a problem
        </a>
         or email the MINT Team at 
        <a
          class="usa-link"
          href="mailto:MINTTeam@cms.hhs.gov"
        >
          MINTTeam@cms.hhs.gov
        </a>
        .
        <p />
      </div>
    </div>
    <div
      class="grid-row grid-gap-2 margin-bottom-1 margin-top-4"
      data-testid="grid"
    />
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`ModelsCardTable > matches snapshot with solution type 1`] = `
<DocumentFragment>
  <div
    id="models-by-solution-table"
  >
    <div
      class="models-by-solutions"
    >
      <div
        class="bg-primary-lighter radius-md padding-2"
      >
        <div
          class="grid-row flex-align-center"
          data-testid="grid"
        >
          <div
            class="tablet:grid-col-6 desktop:grid-col-7"
            data-testid="grid"
          >
            <h3
              class="margin-y-1"
            >
               4innovation (4i)
            </h3>
          </div>
          <div
            class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
            data-testid="grid"
          >
            <ul
              class="usa-button-group usa-button-group--segmented"
            >
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2 bg-primary-darker"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Total
                  </div>
                  <div
                    data-testid="total-count"
                  >
                    5
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Planned
                  </div>
                  <div
                    data-testid="planned-count"
                  >
                    3
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Active
                  </div>
                  <div
                    data-testid="active-count"
                  >
                    1
                  </div>
                </button>
              </li>
              <li
                class="usa-button-group__item"
              >
                <button
                  class="usa-button padding-y-2"
                  data-testid="button"
                  type="button"
                >
                  <div>
                    Ended
                  </div>
                  <div
                    data-testid="ended-count"
                  >
                    1
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-3"
    >
      <form
        class="usa-form usa-search margin-bottom-3 maxw-none width-mobile-lg"
        data-testid="table-client-filter"
        role="search"
      >
        <label
          class="usa-sr-only"
          data-testid="label"
          for="models-by-solution-table-search"
        >
          Search Table
        </label>
        <input
          class="usa-input"
          data-testid="textInput"
          id="models-by-solution-table-search"
          name="Models using specific solutions Search"
          role="searchbox"
          type="search"
          value=""
        />
        <button
          class="usa-button"
          data-testid="button"
          type="submit"
        >
          <svg
            aria-label="search"
            class="usa-icon usa-icon--size-3"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </button>
      </form>
      <div
        class=""
        data-testid="page-results"
      >
        <span>
          <div
            aria-live="polite"
            class="margin-bottom-2"
            role="status"
          >
            Showing 1-3 of 5 results 
          </div>
        </span>
      </div>
    </div>
    <div
      class="grid-row grid-gap-2 margin-bottom-1 margin-top-4"
      data-testid="grid"
    >
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Patient Care Model Alpha"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-1/read-view"
                    >
                      Patient Care Model Alpha (PCMA)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Draft Model Plan
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Accountable Care
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        01/15/2024
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        06/30/2025
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Quality Improvement Model Beta"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-2/read-view"
                    >
                      Quality Improvement Model Beta (QIMB)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Active
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Disease-Specific & Episode-Based
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        07/01/2023
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        12/31/2024
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <div
        class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
        data-testid="grid"
      >
        <li
          class="usa-card model-solution-card width-full margin-bottom-0"
          data-testid="Innovation Project Gamma"
        >
          <div
            class="usa-card__container"
          >
            <div
              class="height-full display-flex flex-column"
            >
              <div
                class="grid-row"
                data-testid="grid"
              >
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <h3
                    class="margin-top-0"
                  >
                    <a
                      class="usa-link"
                      data-discover="true"
                      href="/models/model-3/read-view"
                    >
                      Innovation Project Gamma (IPG)
                    </a>
                  </h3>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="display-flex margin-bottom-1"
                  >
                    <p
                      class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                    >
                      Status
                    </p>
                    <span
                      class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                      data-testid="tag"
                    >
                      Ended
                    </span>
                  </div>
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-y-0 margin-right-1"
                  >
                    Category
                  </p>
                  Health Plan
                </div>
                <div
                  class="desktop:grid-col-12"
                  data-testid="grid"
                >
                  <div
                    class="grid-row grid-gap"
                    data-testid="grid"
                  >
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        Start date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        01/01/2021
                      </p>
                    </div>
                    <div
                      class="mobile:grid-col-6 desktop:grid-col-6"
                      data-testid="grid"
                    >
                      <p
                        class="text-bold margin-bottom-0 margin-right-1"
                      >
                        End date
                      </p>
                      <p
                        class="margin-top-0 margin-bottom-0"
                      >
                        12/31/2022
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div
      class=""
    >
      <nav
        aria-label="Pagination"
        class="usa-pagination mint-pagination"
      >
        <ul
          class="usa-pagination__list"
        >
          <li
            class="usa-pagination__item usa-pagination__page-no"
          >
            <button
              aria-current="page"
              aria-label="Page 1"
              class="usa-pagination__button usa-current bg-transparent cursor-pointer"
              data-testid="pagination-page-number"
              type="button"
            >
              1
            </button>
          </li>
          <li
            class="usa-pagination__item usa-pagination__page-no"
          >
            <button
              aria-label="Page 2"
              class="usa-pagination__button bg-transparent cursor-pointer"
              data-testid="pagination-page-number"
              type="button"
            >
              2
            </button>
          </li>
          <li
            class="usa-pagination__item usa-pagination__arrow"
          >
            <button
              aria-label="Next page"
              class="usa-pagination__link usa-pagination__next-page border-0 padding-0 bg-transparent cursor-pointer"
              data-testid="pagination-next"
              type="button"
            >
              <span
                class="usa-pagination__link-text"
              >
                Next
              </span>
              <svg
                aria-hidden="true"
                class="usa-icon"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
